Fix pagination and small button because German wordings are too long

--- a/src/customizations/aftersearch-nav/_aftersearch-nav.scss
+++ b/src/customizations/aftersearch-nav/_aftersearch-nav.scss
@@ -100,6 +100,10 @@
             padding: 1.3rem 3rem 1.3rem 2rem;
             box-sizing: border-box;
         }
+
+        &:after {
+            display: none;
+        }
     }
 
     &__filter-input,
