--- a/src/customizations/info-block/_info-block.scss
+++ b/src/customizations/info-block/_info-block.scss
@@ -29,6 +29,12 @@
         justify-content: space-between;
         margin: 2rem 0 0;
 
+        .sales-order-history & {
+            @include media('<laptop') {
+                margin-top: 0;
+            }
+        }
+
         &--up {
             margin: 0;
         }
