--- a/src/customizations/pagination/_pagination.scss
+++ b/src/customizations/pagination/_pagination.scss
@@ -10,6 +10,13 @@
         width: auto;
     }
 
+    .account & {
+        width: 20rem;
+        @include media('<phone-lg') {
+            width: 100%;
+        }
+    }
+
     &__label-wrapper {
         display: inline-block;
         margin-right: .5rem;
@@ -135,6 +142,18 @@
         @include media('>=tablet') {
             display: flex;
         }
+
+        .account & {
+            @include media('<laptop') {
+                display: flex;
+                margin-left: 0;
+            }
+            @include media('<phone-lg') {
+                width: 100%;
+                margin-bottom: 2rem;
+                justify-content: center;
+            }
+        }
     }
 
     &__content-mobile {
@@ -142,6 +161,10 @@
         padding: 3rem 2rem 0;
 
         @include media('>=tablet') {
+            display: none;
+        }
+
+        .account & {
             display: none;
         }
     }
