--- a/src/customizations/table/_table.scss
+++ b/src/customizations/table/_table.scss
@@ -16,11 +16,8 @@
         @include media( '<laptop' ) {
             border: none;
             font-size: 1.4rem;
-            padding: .4rem 1rem;
+            padding: 0;
 
-            &:first-child {
-                padding-top: 2rem;
-            }
             &:last-child {
                 padding-bottom: 1.2rem;
             }
@@ -37,14 +34,17 @@
                 border: none;
                 display: block;
                 font-size: 1.4rem;
-                padding: .4rem 1rem;
+                padding: .2rem;
+
 
                 &:first-child {
                     padding-top: 2rem;
                 }
+
                 &:last-child {
-                    padding-bottom: 1.2rem;
+                    padding-bottom: 1rem;
                 }
+
             }
             &:before {
                 @include media( '<laptop' ) {
@@ -227,5 +227,12 @@
                 text-align: right;
             }
         }
+    }
+
+}
+
+.account .#{$namespace}table tr:first-child .#{$namespace}table__col   {
+    @include media( '<laptop' ) {
+        padding-top: 0 !important;
     }
 }
